# Django-App-Boilerplate-with-Docker-compose-Postgres-Makefile

./: .gitignore  .pylintrc  Dockerfile  Makefile  ReadMe.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
