[tool.poetry]
name = "django-example"
version = "0.1.0"
description = ""
authors = ["Dtameka <thevovaha@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
django = "^5.0.6"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
